--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 $color-primary: #080b0d;
 $color-secondary: #12191d;
-$color-tertiary: #2a3740;
+$color-tertiary: #1b1e22;
 
 $color-dark-grey: #6e7173;
 $color-light-grey: #bfbfbf;
