--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -36,11 +36,24 @@ footer {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  max-width: 90%;
+  max-width: 1200px;
   height: 100%;
   margin: 0 auto;
+  padding: 0 1rem;
 }
 
 .section {
   margin: 10rem 0;
+}
+
+.row {
+  width: 100%;
+  align-items: flex-start;
+  gap: 3rem;
+}
+
+@media only screen and (min-width: 1000px) {
+  .row {
+    flex-direction: row;
+  }
 }
