--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,10 @@
 @import "abstracts/variables";
 @import "abstracts/mixin";
 @import "base/typography";
+@import "components/accordion";
 @import "components/buttons";
+@import "components/cards";
+@import "components/images";
 @import "components/loader";
 @import "layout/footer";
 @import "layout/forms";
@@ -9,3 +12,4 @@
 @import "layout/navigation";
 @import "pages/home";
 @import "pages/contact";
+@import "pages/launches";
