--- a/sass/layout/_forms.scss
+++ b/sass/layout/_forms.scss
@@ -1,8 +1,15 @@
 .form-contact {
   width: 100%;
   max-width: 500px;
-  background-color: cadetblue;
-  margin-top: 5rem;
+  background-color: $color-tertiary;
+  padding: 2rem;
+  margin-top: 3rem;
+}
+
+.form-details {
+  margin-bottom: 1rem;
+  font-size: 1.6rem;
+  color: $color-light;
 }
 
 .form__input {
@@ -10,25 +17,26 @@
   padding: 0 0.8rem;
   width: 100%;
   height: 45px;
+  font-size: 1.6rem;
   background-color: rgba($color-light, 0.7);
   margin-top: 1rem;
 }
 
 .form__input::placeholder {
   color: $color-dark;
-  font-size: 1.6rem;
 }
 
-#message {
+.form__textarea {
+  height: 200px;
   font-family: $font-primary;
-  height: 150px;
+  padding: 0.8rem;
 }
 
 .form-error {
   display: none;
-  color: rgb(255, 53, 53);
-  font-size: 1.6rem;
-  padding-bottom: 1.5rem;
+  color: $color-light;
+  background-color: red;
+  padding: 1rem 0.8rem;
 }
 
 .subscribe-form {
@@ -37,31 +45,6 @@
   margin: 4rem 0 6rem;
   width: 100%;
   max-width: 400px;
-}
-
-.contact-section {
-  display: flex;
-  flex-direction: column;
-  margin: 10rem 1rem;
-}
-
-.contact-form-container {
-  padding-bottom: 6rem;
-}
-
-.contact-form__box {
-  max-width: 600px;
-  margin: 4rem auto;
-}
-
-.contact-form__box label {
-  font-size: 1.8rem;
-}
-
-.contact-form__details span {
-  display: inline-block;
-  font-size: 1.6rem;
-  font-style: italic;
 }
 
 #submit-message {
