--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,7 +2,7 @@ $color-primary: #080b0d;
 $color-secondary: #12191d;
 $color-tertiary: #1b1e22;
 
-$color-dark-grey: #6e7173;
+$color-dark-grey: #5a5c5d;
 $color-light-grey: #bfbfbf;
 $color-cta: #d500c7;
 
