--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -37,9 +37,11 @@
 
   &__link--active {
     border-bottom: 1px solid $color-light;
+    background-color: rgba($color-primary, 0.6);
   }
 
   &__link:hover,
+  &__link:focus,
   &__link:active {
     border-bottom: 1px solid $color-light;
   }
