--- a/sass/abstracts/_mixin.scss
+++ b/sass/abstracts/_mixin.scss
@@ -2,6 +2,7 @@
   cursor: pointer;
   text-transform: uppercase;
   font-family: $font-secondary;
+  transition: all 300ms;
 }
 
 @mixin container-accordion {
