--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -1,7 +1,51 @@
+.cards {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+
 .card {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  text-align: center;
-  width: 100%;
+
+  &-content {
+    width: 100%;
+  }
+
+  & .patch {
+    margin: 0;
+  }
+
+  &.center {
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    max-width: 500px;
+  }
+
+  &__image {
+    width: 100%;
+    max-width: 500px;
+    margin-bottom: 6px;
+  }
+
+  &__details {
+    display: flex;
+    flex-direction: column;
+
+    & h4 {
+      margin-bottom: 6px;
+    }
+
+    & a {
+      margin: 4px 0;
+    }
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  .cards {
+    flex-direction: row;
+    width: 100%;
+  }
 }
