--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,7 +1,7 @@
 .banner {
   background-image: url("../../images/galaxy-night-landscape.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: right;
   height: calc(100vh + 247px);
   position: relative;
   padding: 1rem;
