change image path

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,5 +1,5 @@
 .banner {
-  background-image: url("../../images/galaxy-night-landscape.jpg");
+  background-image: url("../images/galaxy-night-landscape.jpg");
   background-size: cover;
   background-position: right;
   height: calc(100vh + 247px);
