--- a/css/style.css
+++ b/css/style.css
@@ -726,7 +726,7 @@ footer {
 }
 
 .banner {
-  background-image: url("../../images/galaxy-night-landscape.jpg");
+  background-image: url("../images/galaxy-night-landscape.jpg");
   background-size: cover;
   background-position: right;
   height: calc(100vh + 247px);
